apps/root-task/tests/ui/hex_dump_slice_pointer.stderr
error[E0308]: mismatched types
  --> tests/ui/hex_dump_slice_pointer.rs:16:24
   |
16 |     accepts_slice_only(ptr);
   |     ------------------ ^^^ expected `&[u8]`, found `*const u8`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&[u8]`
            found raw pointer `*const u8`
note: function defined here
  --> tests/ui/hex_dump_slice_pointer.rs:20:4
   |
20 | fn accepts_slice_only(_slice: &[u8]) {}
   |    ^^^^^^^^^^^^^^^^^^ -------------
